<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.mormeehing.feature.auth.SplashFragment"
        android:label="@string/title_splash">
        <argument
            android:name="title"
            android:defaultValue="@null"
            app:argType="string" />
        <action
            android:id="@+id/action_splash_to_login"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.mormeehing.feature.auth.LoginFragment"
        android:label="@string/title_login">
        <argument
            android:name="title"
            android:defaultValue="@null"
            app:argType="string" />
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/iogin_to_search"
            app:destination="@id/searchFragment" />

    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.mormeehing.HomeFragment"
        android:label="@string/title_home">
        <argument
            android:name="title"
            android:defaultValue="@null"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.mormeehing.feature.jobs.SearchFragment"
        android:label="@string/title_search">
        <argument
            android:name="title"
            android:defaultValue="@null"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/createJobFragment"
        android:name="com.example.mormeehing.JobFragment"
        android:label="@string/title_create_job">
        <argument
            android:name="title"
            android:defaultValue="@null"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/scheduleFragment"
        android:name="com.example.mormeehing.TableFragment"
        android:label="@string/title_schedule">
        <argument
            android:name="title"
            android:defaultValue="@null"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.mormeehing.ProfileFragment"
        android:label="@string/title_profile">
        <argument
            android:name="title"
            android:defaultValue="@null"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/jobDetailsFragment"
        android:name="com.example.mormeehing.feature.common.PlaceholderFragment"
        android:label="@string/title_job_details">
        <argument
            android:name="title"
            android:defaultValue="@null"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/workHoursFragment"
        android:name="com.example.mormeehing.feature.common.PlaceholderFragment"
        android:label="@string/title_work_hours">
        <argument
            android:name="title"
            android:defaultValue="@null"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/incomeFragment"
        android:name="com.example.mormeehing.feature.common.PlaceholderFragment"
        android:label="@string/title_income">
        <argument
            android:name="title"
            android:defaultValue="@null"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/applicationsFragment"
        android:name="com.example.mormeehing.feature.common.PlaceholderFragment"
        android:label="@string/title_applications">
        <argument
            android:name="title"
            android:defaultValue="@null"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/searchFiltersFragment"
        android:name="com.example.mormeehing.feature.common.PlaceholderFragment"
        android:label="@string/title_search_filters">
        <argument
            android:name="title"
            android:defaultValue="@null"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/regisFragment"
        android:name="com.example.mormeehing.RegisFragment"
        android:label="สมัครสมาชิก">
        <argument
            android:name="title"
            android:defaultValue="@null"
            app:argType="string" />
    </fragment>

</navigation>
