<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"
            android:checkable="true"
            app:showAsAction="ifRoom|withText" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search"
            android:checkable="true"
            app:showAsAction="ifRoom|withText" />
        <item
            android:id="@+id/nav_action_spacer"
            android:enabled="false"
            android:icon="@drawable/ic_transparent"
            android:title="@string/menu_action_spacer"
            android:checkable="false"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_schedule"
            android:checkable="true"
            app:showAsAction="ifRoom|withText" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_profile"
            android:checkable="true"
            app:showAsAction="ifRoom|withText" />
    </group>
</menu>
