<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".core.navigation.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph"
        tools:layout="@layout/fragment_placeholder" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bar_height"
        android:layout_gravity="bottom"
        android:background="@color/color_surface"
        android:visibility="gone"
        app:itemIconSize="@dimen/icon_size"
        app:itemIconTint="@color/bottom_navigation_item_color"
        app:itemTextColor="@color/bottom_navigation_item_color"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/menu_bottom_app_bar"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_job_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:contentDescription="@string/content_description_add"
        android:src="@drawable/ic_add"
        android:visibility="gone"
        app:backgroundTint="@color/color_primary"
        app:layout_anchor="@id/bottom_app_bar"
        app:layout_anchorGravity="top|center"
        app:layout_dodgeInsetEdges="bottom"
        app:tint="@color/color_on_primary"
        tools:visibility="visible" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
